# cmake-demo

./: .gitignore
Demo1/: CMakeLists.txt  main.cc
Demo2/: CMakeLists.txt
Demo3/: CMakeLists.txt  readme.md
Demo3/math/: CMakeLists.txt
Demo4/: CMakeLists.txt  main.cc  readme.md
Demo5/: CMakeLists.txt  readme.md
